# PhotoAgent

./: .gitignore  handoff-2026-04-03.md  photoagent-build-plan.md  project-status.md  pyproject.toml
photoagent-app/: .gitignore  DESIGN-SYSTEM.md  package-lock.json  package.json
photoagent-app/scripts/: build-sidecar.sh
photoagent-app/src/: App.tsx  main.tsx
photoagent-app/src-tauri/: Cargo.toml  tauri.conf.json
photoagent-app/src-tauri/capabilities/: default.json
photoagent-app/src-tauri/src/: commands.rs  lib.rs  main.rs
photoagent-app/src/context/: AppContext.tsx
photoagent-app/src/hooks/: usePhotoAgent.ts
photoagent-app/src/screens/: DashboardScreen.tsx  ExecutionScreen.tsx  PhotoGridScreen.tsx  PlannerScreen.tsx  SettingsScreen.tsx  WelcomeScreen.tsx
photoagent-app/src/styles/: globals.css
src/photoagent/: analyze_cli.py  cli.py  config_manager.py  database.py  execute_cli.py  executor.py  exif.py  export.py  face_manager.py  hashing.py  models.py  organize_cli.py  plan_display.py  planner.py  scan_cli.py  scanner.py  search.py  search_cli.py  summarizer.py  template_cli.py  templates.py  undo.py
tests/: conftest.py  test_cli.py  test_cloud_analyzer.py  test_cloud_cli.py  test_cloud_organize.py  test_cloud_store.py  test_cloud_thumbnail.py  test_config.py  test_database.py  test_execute_edge_cases.py  test_executor.py  test_exif.py  test_export.py  test_face_manager.py  test_hashing.py  test_plan_display.py  test_planner.py  test_privacy.py  test_quality.py  test_scanner.py  test_search.py  test_summarizer.py  test_templates.py  test_undo.py
(+16 files in other folders)
